2004-04-14  Theodore A. Roth  <troth@openavr.org>

	* configure.in (AM_INIT_AUTOMAKE): Bump version.
	* include/avr/iotn13.h: New file.

2004-04-13  Theodore A. Roth  <troth@openavr.org>

	* include/avr/iotn2313.h: Don't define the EERIE, EEMPE, EEPE and EERE
	bits since they're defined in <avr/io.h>.

2004-04-13  Joerg Wunsch <j.gnu@uriah.heep.sax.de>
[Contributed by <adebeun@enatel.net>]

	* include/avr/wdt.h: Fix _wdt_write() for the ATmega169,
	closes bug #8119.

2004-04-13  Theodore A. Roth  <troth@openavr.org>
[Contributed by Bob Paddock <bpaddock@csonline.net>]

	* configure.in (AM_INIT_AUTOMAKE): Bump version.
	* include/avr/iotn2313.h: New file.

2004-04-06  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* doc/api/faq.dox: Cosmetics: update (C) year, remove some
	vestiges of trailing whitespace.

2004-04-06  Theodore A. Roth  <troth@openavr.org>

	* include/avr/iom169.h: Update copyright year.
	Fixes for bug #8452.
	(OCR1A): Fix register name.
	(OCR1B): Ditto.
	(UCSRA): Ditto.
	(UCSRB): Ditto.
	(UCSRC): Ditto.
	(UBRR): Ditto.
	(UDR): Ditto.
	(PG5): Remove define.
	(ADHSM): Ditto.
	(WDCE): Fix bit name.
	(ISC01, ISC00): Define for EICRA register.

2004-04-06  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* doc/api/faq.dox: Add items for "clock skew detected", why
	are interrupt bits cleared by a `1', and why are programmed
	fuse bits at logical 0.

2004-04-06  Theodore A. Roth  <troth@openavr.org>

	* include/avr/iomx8.h (ADC): Fix to make it 16 bit.
	(ADCW): Ditto.

2004-04-06  Theodore A. Roth  <troth@openavr.org>

	* configure.in (AM_INIT_AUTOMAKE): Bump version.
	* include/avr/iom168.h: New file.
	* include/avr/iom48.h: New file.
	* include/avr/iom88.h: New file.
	* include/avr/iomx8.h: New file.

2004-04-05  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* doc/api/main_page.dox, faq.dox: Add reference to Bruce Lightner's
	trickery page for programming small AVRs in C.

2004-04-05  Theodore A. Roth  <troth@openavr.org>

	* configure.in (AM_INIT_AUTOMAKE): Bump version.